Fixed header sizing on smaller screens than ~1300 width

--- a/client/scss/common/_header.scss
+++ b/client/scss/common/_header.scss
@@ -13,6 +13,11 @@
   background-size: cover;
   border-top: $poster-border-width solid #fff;
   @include media-breakpoint-up(md) {
+    padding:  5em 0 7em 0;
+    height: 423px;
+  }
+
+  @media (min-width: 1300px) {
     padding: 9em;
     height: 623px;
   }
